[package]
name = "tof"
version = "0.1.0"
authors = ["nebelgrau <nebelgrau@gmx.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

stm32l0xx-hal = {version = "*", features = ["rt", "mcu-STM32L031K6Tx"]}
stm32l0 = {version = "0.11", features = ["stm32l0x1", "rt"]}
panic-halt = "0.2"
cortex-m = {version = "0.6", features = ["const-fn"] }
cortex-m-rt = "0.6"    

vl53l0x = "*"

nb = "0.1"

[profile.release]
debug = true
lto = true
opt-level = "z"