[package]
name = "tof"
version = "0.1.0"
authors = ["nebelgrau <nebelgrau@gmx.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

stm32l0xx-hal = {version = "*", features = ["rt", "mcu-STM32L031K6Tx"]}
stm32l0 = {version = "0.11", features = ["stm32l0x1", "rt"]}
cortex-m = {version = "*", features = ["const-fn"]}
cortex-m-rt = "0.6"    
panic-halt = "0.2"

vl53l0x = "*"
ssd1306 = {version ="0.3.0-alpha.4", features=["graphics"]}
embedded-graphics = "0.6.0-alpha.3"
shared-bus = {version = "0.1.4", features = ["cortexm"]}
arrayvec = {version = "0.5.1",default-features = false}

[profile.release]
debug = true
lto = true
opt-level = "z"