[package]
name = "nano33iot_distance"
version = "0.1.0"
authors = ["nebelgrau77"]
keywords = ["no-std", "arm", "cortex-m", "embedded-hal", "arduino", "oled", "display", "SSD1306", "vl53l0x", "tof", "sensor"]
license = "MIT OR Apache-2.0"
repository = ""
readme = "README.md"
edition = "2018"

[dependencies]
cortex-m = {version = "~0.6.1", features = ["const-fn"]}
cortex-m-rt = {version = "~0.6.12", optional = true}
panic-halt = {version = "~0.2", optional = true}
embedded-hal = "~0.2.3"
nb = "~0.1"
atsamd-hal = {version = "~0.9", default-features = false}

ssd1306 = {version ="0.3.1", features=["graphics"]}
vl53l0x = "0.3.1"
shared-bus = {version = "0.1.4", features = ["cortexm"]}
arrayvec = {version = "0.5.1",default-features = false}

[dependencies.arduino_nano33iot]
path = "custom_crate/arduino_nano33iot"
version = "0.2.1-alpha"

[features]
# ask the HAL to enable atsamd21g18a support
default = ["rt", "panic_halt", "atsamd-hal/samd21g18a"]
rt = ["cortex-m-rt", "atsamd-hal/samd21g18a-rt"]
panic_halt = ["panic-halt"]
unproven = ["atsamd-hal/unproven"]
use_semihosting = []

[profile.release]
debug = true
lto = true
opt-level = "z"

